# docs/swagger.yaml
@@ -208,34 +208,6 @@ info:
   title: 进销存 Swagger API接口文档
   version: v0.0.1
 paths:
-  /api/DeleteGoodsByIds:
-    delete:
-      consumes:
-      - application/json
-      parameters:
-      - description: ID
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.IdsReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 删除
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.Response'
-            - properties:
-                msg:
-                  type: string
-              type: object
-      security:
-      - ApiKeyAuth: []
-      summary: 删除
-      tags:
-      - FactoryApi
   /api/deleteBrandByIds:
     delete:
       consumes:
@@ -290,6 +262,34 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 删除选中brand
+      tags:
+      - FactoryApi
+  /api/getProductBuildInfo:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: id
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.GetById'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 展示制作工艺
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 修改基础api
       tags:
       - FactoryApi
   /api/showCost:
@@ -488,6 +488,34 @@ paths:
       summary: 创建产品
       tags:
       - FactoryApi
+  /factory/deleteGoodsByIds:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.IdsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 删除
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 删除
+      tags:
+      - FactoryApi
   /factory/getBrandList:
     post:
       consumes:
@@ -573,9 +601,7 @@ paths:
                 msg:
                   type: string
               type: object
-      security:
-      - ApiKeyAuth: []
-      summary: 分页获取prduct
+      summary: 产品信息展示
       tags:
       - FactoryApi
   /factory/production:
